# zelana

./: .env.example  .gitignore  Cargo.toml  README.md  cargo  config.toml
cli/: Cargo.toml  README.md
cli/src/: airdrop.rs  dev.rs  main.rs
config/: Cargo.toml  README.md
core/: Cargo.toml  README.md
core/examples/: api_tx.rs  bench_throughput.rs  bridge.rs  dev_sequencer.rs  full_lifecycle.rs  l2tx.rs  transaction.rs
core/src/: config.rs  lib.rs  main.rs  main_new.rs
core/src/api/: handlers.rs  mod.rs  routes.rs  types.rs  udp_server.rs
core/src/sequencer/: batch.rs  db.rs  executor.rs  fast_withdrawals.rs  ingest.rs  main.rs  mod.rs  pipeline.rs  prover.rs  session.rs  settler.rs  shielded_state.rs  threshold_mempool.rs  tx_router.rs  withdrawals.rs
core/src/sequencer/bridge/: fast_withdrawals.rs  ingest.rs  mod.rs  withdrawals.rs
core/src/sequencer/execution/: batch.rs  executor.rs  mod.rs  tx_router.rs
core/src/sequencer/mempool/: mod.rs  threshold_mempool.rs
core/src/sequencer/settlement/: mimc.rs  mod.rs  noir_client.rs  prover.rs  settler.rs
core/src/sequencer/storage/: account_tree.rs  db.rs  mod.rs  shielded_state.rs
core/src/sequencer/tests/: db.rs  executor.rs  integration.rs  integration_full.rs  mod.rs  noir_integration.rs  session.rs
core/src/storage/: memory.rs  mod.rs  processor.rs  state.rs
debug/db/: Cargo.toml  README.md
debug/db/src/: app.rs  db.rs  events.rs  main.rs  theme.rs
debug/db/src/ui/: accounts.rs  layout.rs  mod.rs  nullifiers.rs  transactions.rs
debug/web/db-reader/: Cargo.toml
debug/web/db-reader/src/: main.rs
forge/crates/: Cargo.toml
forge/crates/prover-control/: Cargo.toml
forge/crates/prover-coordinator/: Cargo.toml
forge/crates/prover-coordinator/src/: core_api.rs  dispatcher.rs  lib.rs  main.rs  ownership_api.rs  settler.rs  solana_client.rs
forge/crates/prover-core/: Cargo.toml
forge/crates/prover-core/src/: commitment.rs  hash_preimage.rs  integration_test.rs  rng_test.rs  shamir.rs
forge/crates/prover-network/: Cargo.toml
forge/crates/prover-network/src/: lib.rs  messages.rs  serialization_test.rs
forge/crates/prover-node/: Cargo.toml
forge/crates/prover-node/src/: main.rs
forge/crates/prover-worker/: Cargo.toml
forge/crates/prover-worker/src/: main.rs  mimc.rs  prover.rs
onchain-programs/bridge/: .gitignore  Cargo.toml  README.md
onchain-programs/bridge/idl/: bridge_z.json
onchain-programs/bridge/src/: entrypoint.rs  lib.rs
onchain-programs/bridge/src/helpers/: account_checks.rs  account_init.rs  mod.rs  utils.rs
onchain-programs/bridge/src/instruction/: deposit.rs  init.rs  mod.rs  submit_batch.rs  withdraw.rs
onchain-programs/bridge/src/state/: config.rs  depositreceipt.rs  mod.rs  usernullifier.rs  vault.rs
onchain-programs/bridge/tests/: deposit.rs  init.rs  submit_batch.rs  withdraw.rs  zk_verification.rs
onchain-programs/bridge/tests/common/: mod.rs
prover/: Cargo.toml  README.md  l2_proof.json  l2_vk.json
prover/src/: constants.rs  l2_circuit.rs  lib.rs  main.rs  main.rs.bak  prover_inputs.rs  snarkjs.rs  witness.rs  witness_builder.rs
prover/src/circuit/: hash.rs  l2_block.rs  merkle.rs  mod.rs  poseidon.rs  shielded.rs
scripts/: Cargo.toml  cargo-clippy-nightly.sh  cargo-clippy.sh  cargo-for-all-lock-files.sh  deploy.sh  deploy_mvp.sh  reset-dev.sh  start-sequencer.sh
scripts/src/: check_balance.rs  config.rs  deposit.rs  e2e_test.rs  init_bridge.rs  store_vk.rs  transfer.rs
sdk/keypair/: Cargo.toml
sdk/keypair/src/: lib.rs
sdk/ownership-prover/: Cargo.toml
sdk/ownership-prover/src/: lib.rs  mimc.rs  wasm.rs
sdk/privacy/: Cargo.toml
sdk/privacy/src/: commitment.rs  encryption.rs  lib.rs  merkle.rs  note.rs  nullifier.rs
sdk/pubkey/: Cargo.toml
sdk/pubkey/src/: lib.rs
sdk/threshold/: Cargo.toml
sdk/threshold/src/: committee.rs  encrypted_tx.rs  lib.rs  shares.rs
sdk/transaction/: Cargo.toml
sdk/transaction/src/: bridge.rs  lib.rs
sdk/txblob/: Cargo.toml
sdk/txblob/src/: crypto.rs  lib.rs  tests.rs  types.rs
sdk/txblob/tests/: hash.rs  mod.rs  roundtrip.rs  tamper.rs
sdk/zephyr/: Cargo.toml  README.md
sdk/zephyr/src/: client.rs  keys.rs  lib.rs  packet.rs
zelana-forge/: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DECENTRALIZED_POC.md  PRIVACY.md  README.md  run_mpc_benchmark.sh
zelana-forge/af_xdp/: Cargo.toml
zelana-forge/af_xdp/src/: lib.rs
zelana-forge/circuits/batch_processor/: Nargo.toml  Prover.toml
zelana-forge/circuits/ownership/: Prover.toml
zelana-forge/circuits/ownership/src/: main.nr
zelana-forge/circuits/zelana_batch/: Prover.toml
zelana-forge/circuits/zelana_batch/src/: main.nr
zelana-forge/circuits/zelana_lib/: Nargo.toml
zelana-forge/circuits/zelana_lib/src/: account.nr  merkle.nr  nullifier.nr  poseidon.nr  signature.nr
zelana-forge/crates/: .gitignore  Cargo.toml
zelana-forge/crates/prover-control/src/: main.rs
zelana-forge/crates/prover-coordinator/src/: core_api.rs  dispatcher.rs  main.rs  ownership_api.rs  settler.rs  solana_client.rs
zelana-forge/crates/prover-core/src/: errors.rs  integration_test.rs  lib.rs  schnorr.rs
zelana-forge/crates/prover-network/src/: messages.rs  serde_utils.rs  serialization_test.rs
zelana-forge/crates/prover-node/src/: main.rs
zelana-forge/crates/prover-worker/: Cargo.toml
zelana-forge/crates/prover-worker/src/: lib.rs  main.rs  mimc.rs  prover.rs
zelana-forge/dashboard/: README.md  next.config.mjs
zelana-forge/dashboard/app/: globals.css
zelana-forge/dashboard/app/circuits/: hash-preimage.ts  index.ts  schnorr.ts
zelana-forge/dashboard/app/components/: HashGenerator.tsx  InteractiveDashboard.tsx  LogViewer.tsx  ParallelSwarmView.tsx  WorkflowPanel.tsx
zelana-forge/deploy/docker/: Dockerfile.node  Dockerfile.worker  docker-compose.swarm.yml
zelana-forge/deploy/k8s/: README.md
zelana-forge/prover/: Cargo.toml
zelana-forge/prover/src/: lib.rs  main.rs
zelana-forge/scripts/: deploy-k8s.sh  manual-test.md  start-dashboard.sh  start-prover-coordinator.sh  start-prover-workers.sh  start-swarm.sh  test-local.sh
(+180 files in other folders)
