[workspace]
members = ["core", "prover", "sdk"]
resolver = "3"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/zelana-labs/zelana"
homepage = "https://zelana.org/"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = { version = "0.4", features = ["serde"] }
zelana-transaction = { path = "sdk/transaction", version = "0.1.0"}
zelana-signature = { path = "sdk/signature", version = "0.1.0"}
zelana-account = { path = "sdk/account", version = "0.1.0"}
zelana-pubkey = {path= "sdk/pubkey", version = "0.1.0"}
zelana-block = {path = "sdk/block", version = "0.1.0"}