[workspace]
members = [
    "core",
    "prover",
    "onchain-programs/bridge",
    #"onchain-programs/verifier",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/zelana-labs/zelana"
homepage = "https://zelana.org/"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
# --- internal SDK crates ---
zelana-transaction = { path = "sdk/transaction" }
zelana-signature   = { path = "sdk/signature" }
zelana-account     = { path = "sdk/account" }
zelana-pubkey      = { path = "sdk/pubkey" }
zelana-block       = { path = "sdk/block" }
zelana-keypair     = { path = "sdk/keypair" }
zephyr             = { path = "sdk/zephyr" }

# --- external deps ---
anyhow = "1.0.100"
blake3 = "1.8.0"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.2.0"
hex = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
wincode = "0.2.1"
wincode-derive = "0.2.0"
x25519-dalek = "2.0.1"