[workspace]
members = [
    "cli",
    "core",
    "debug/db",
    "debug/web/db-reader",
    "prover",
    "scripts",
    "sdk/privacy",
    "sdk/threshold",
    "sdk/txblob",
    #"onchain-programs/verifier",
]
exclude = ["onchain-programs/bridge"]
resolver = "3"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/zelana-labs/zelana"
homepage = "https://zelana.org/"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
# --- internal SDK crates ---
zelana-transaction = { path = "sdk/transaction" }
zelana-signature = { path = "sdk/signature" }
zelana-account = { path = "sdk/account" }
zelana-pubkey = { path = "sdk/pubkey" }
zelana-block = { path = "sdk/block" }
zelana-keypair = { path = "sdk/keypair" }
zelana-privacy = { path = "sdk/privacy" }
zelana-threshold = { path = "sdk/threshold" }
zephyr = { path = "sdk/zephyr" }
txblob = { path = "sdk/txblob" }
prover = { path = "prover" }
zelana-config = { path = "config" }

# --- external deps ---
rocksdb = "0.24.0"
anyhow = "1.0.100"
blake3 = "1.8.0"
chacha20poly1305 = "0.10.1"
ed25519-dalek = "2.2.0"
hex = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
wincode = "0.2.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
