[package]
name = "cli"
version = { workspace = true }
edition = { workspace = true }
description = "Zelana CLI"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { workspace = true }
serde_json = "1.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-sdk = "3.0.0"
tokio = { workspace = true }
wincode = { workspace = true }
zelana-keypair = { workspace = true }
zelana-transaction = { workspace = true }