[package]
name = "core"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "core"
path = "src/main.rs"

[dependencies]
anyhow = {workspace = true}
blake3 = { workspace = true }
chacha20poly1305 = {workspace = true}
dashmap = "5.5"                           # Concurrent HashMap for session management
ed25519-dalek = {workspace = true}
env_logger = "0.10"
hex = { workspace = true }
hkdf = "0.12"
log = "0.4"
rocksdb = "0.24"
sha2 = {workspace = true}
solana-client = "3.1.3"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.17"
tokio-util = "0.7"
wincode = { workspace = true }
wincode-derive = { workspace = true }
x25519-dalek = { workspace = true }
zephyr = { workspace = true }
zelana-account = { workspace = true }
zelana-keypair = { workspace = true }
zelana-transaction = { workspace = true }

[dev-dependencies]
borsh = "1.6.0"
solana-program = "3.0.0"
