[package]
name = "prover"
version = {workspace = true}
edition = {workspace = true}

 [[bin]]
name = "prover"
path = "src/main.rs"

[dependencies]
ark-std = { version = "0.5", features = ["std"] }
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand = "0.9.2"
ark-serialize = "0.5"
serde = { workspace = true}
serde_json = "1.0"
base64 = "0.22"
ark-ec = "0.5"
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["std", "sponge", "r1cs", "merkle_tree"] }
solana-sdk = "3.0"
hex = { version = "0.4", features = ["serde"] }
tokio = {version = "1" , features = ["full"]}
dotenvy = "0.15"
anyhow = "1.0"
#rollup-core = {  path = "../zelana-l2/crates/rollup-core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
bincode = "1"
rocksdb = "0.24.0"
solana-client =  {version = "3.0" } 
solana-commitment-config = "3.0"
solana-system-interface="2.0"
byteorder = "1.5"
serde_bytes = {workspace = true}
zelana-transaction = { workspace = true}
zelana-signature = { workspace = true}
zelana-pubkey = {workspace = true}
zelana-account = {workspace = true}
zelana-block = {workspace = true}