[package]
name = "prover"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "prover"
path = "src/main.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[[bin]]
name = "convert_vk"
path = "src/bin/convert_vk.rs"

[dependencies]
ark-std = { version = "=0.5.0", features = ["std"] }
ark-ff = "=0.5.0"
ark-ec = "=0.5.0"
ark-relations = "=0.5.0"
ark-r1cs-std = "=0.5.0"
ark-serialize = "=0.5.0"

ark-groth16 = "=0.5.0"
ark-snark = "0.5"
ark-bn254 = "=0.5.0"
# BLS12-381 kept for reference but not used in circuits
# ark-bls12-381 = "=0.5.0"
# ark-ed-on-bls12-381 = "=0.5.0"

ark-crypto-primitives = { version = "=0.5.0", default-features = false, features = [
    "std",
    "sponge",
    "r1cs",
    "crh",
    "signature",
] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = "0.6.8"
solana-sdk = "3.0.0"
hex = { version = "0.4.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0"
#rollup-core = {  path = "../zelana-l2/crates/rollup-core" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
bincode = "1"
rocksdb = "0.24.0"
solana-client = { version = "3.0" }
solana-commitment-config = "3.1.0"
solana-system-interface = "2.0"
byteorder = "1.5"
blake3 = "1"
serde_bytes = { workspace = true }
zelana-transaction = { workspace = true }
zelana-signature = { workspace = true }
zelana-pubkey = { workspace = true }
zelana-account = { workspace = true }
zelana-block = { workspace = true }
