[package]
name = "zelana-scripts"
version = "0.1.0"
edition = "2021"
description = "Manual testing scripts for Zelana L2"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.40", features = ["full"] }
solana-sdk = "2.2"
solana-client = "2.2"
solana-commitment-config = "2.2"
borsh = "1.5"
bs58 = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# Local dependencies
zelana-keypair = { workspace = true }
zelana-account = { workspace = true }
zelana-transaction = { workspace = true }
zelana-config = { workspace = true }
