[workspace]
members = [
    "af_xdp",
    "prover",
    "crates/prover-core",
    "crates/prover-network",
    "crates/prover-node",
    "crates/prover-coordinator",
    "crates/prover-control",
    "crates/prover-worker",
]

default-members = [
    "prover",
    "crates/prover-core",
    "crates/prover-network",
    "crates/prover-node",
    "crates/prover-coordinator",
    "crates/prover-control",
    "crates/prover-worker",
]
resolver = "2"

cargo-features = ["panic-immediate-abort"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zelana-labs/zelana-prover"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = "0.1.1"
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }

# Cryptography - arkworks 0.5
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-serialize = "0.5"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.9"
anyhow = "1.0"
tower = "0.5"
hex = { version = "0.4", features = ["serde"] }

# Utilities
sha2 = "0.10"
getrandom = "0.2"
thiserror = "2"
subtle = "2.6"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
prover-core = { path = "crates/prover-core" }
prover-network = { path = "crates/prover-network" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
