[workspace]
resolver = "2"
members = [
    "prover-core",
    "prover-network",
    "prover-node",
    "prover-coordinator",
    "prover-control",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Zelana Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zelana/zelana-prover"

[workspace.dependencies]
# Arkworks cryptography
ark-ff = "0.5"
ark-ec = "0.5"
ark-bn254 = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Utilities
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
hex = { version = "0.4", features = ["serde"] }
subtle = "2.4"
getrandom = "0.2"

# Testing
rand = "0.8"
