[package]
name = "bridge-z"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
shank = "0.4.2"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"
hex = "0.4"

[features]
default = []
std = []