cargo-features = ["edition2024"]

[package]
name = "bridge-z"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
shank = "0.4.6"

[dev-dependencies]
hex = "0.4.3"
litesvm = "0.6.1"
solana-sdk = "2.2.1"
solana-program = "3.0.0"

[features]
default = []
std = []
no-entrypoint = []
