[package]
name = "zelana-keypair"
description = "Zelana Keypair type"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
wincode = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
zelana-transaction = { workspace = true }
zelana-account = { workspace = true }
zelana-pubkey = { workspace = true }
solana-sdk = "3.0.0"
bs58 = "0.5"
serde_json = "1.0"