[package]
name = "zelana-ownership-prover"
version = "0.1.0"
edition = { workspace = true }
description = "WASM prover for ownership circuit - client-side proof generation"
repository = "https://github.com/zelana-labs/zelana"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "getrandom/js", "serde-wasm-bindgen"]

[dependencies]
# BN254 field arithmetic (matches Noir's default curve)
ark-bn254 = "=0.5.0"
ark-ff = "=0.5.0"
ark-std = { version = "=0.5.0", features = ["std"] }
ark-serialize = "=0.5.0"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# For JSON serialization in WASM
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For hex encoding
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
