[package]
name = "zelana-pubkey"
description = "Zelana Pubkey type"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
zelana-account = { workspace = true }
bs58 = "0.5"
wincode = { workspace = true , features = ["derive"] }