[package]
name = "zelana-transaction"
description = "Zelana Transaction type"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
zelana-account = { workspace = true }
zelana-pubkey = { workspace = true }
zelana-signature = { workspace = true }
wincode = { workspace = true , features = ["derive"] }
rocksdb = {workspace = true}