[package]
name = "zephyr"
description = "Zelana Zephyr type"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
hkdf = "0.12"
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
rand_core = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true, features = ["static_secrets"] }
zelana-transaction = {workspace = true}
wincode = {workspace = true}

[features]
default = ["async"]
async = ["tokio"]