[package]
name = "db-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
hex = { workspace = true }
wincode = { workspace = true }

# Internal dependencies for types
zelana-account = { workspace = true }
zelana-block = { workspace = true }
zelana-privacy = { workspace = true }
