[package]
name = "prover-control"
description = "Control server for managing Docker Compose cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prover-control"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
