[package]
name = "prover-coordinator"
description = "Parallel Swarm Coordinator - The Brain of distributed proving"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prover-coordinator"
path = "src/main.rs"

[[bin]]
name = "verify-proof"
path = "src/bin/verify-proof.rs"

[dependencies]
# Internal crates
prover-network = { path = "../prover-network" }

# Async runtime & HTTP
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Crypto
sha2.workspace = true
hex.workspace = true

# Utilities
anyhow.workspace = true
rand.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4"] }

# SSE/Streaming
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Prover worker (for types and MiMC)
prover-worker = { path = "../prover-worker" }

# Solana SDK for proof verification
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
bs58 = "0.5"
shellexpand = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
