[package]
name = "prover-node"
description = "HTTP server for distributed prover nodes"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prover-node"
path = "src/main.rs"

[dependencies]
prover-core = { path = "../prover-core" }
prover-network = { path = "../prover-network" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ark-std.workspace = true
rand.workspace = true
hex.workspace = true
clap = { version = "4", features = ["derive", "env"] }

getrandom.workspace = true

[dev-dependencies]
ark-std.workspace = true
