[package]
name = "prover-worker"
description = "Distributed prover worker node - executes Noir circuits and returns proofs"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "prover_worker"
path = "src/lib.rs"

[[bin]]
name = "prover-worker"
path = "src/main.rs"

[dependencies]
# Internal crates
prover-network = { path = "../prover-network" }

# Async runtime & HTTP
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
anyhow.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4"] }
sha2.workspace = true

# Arkworks for MiMC hash computation
ark-bn254.workspace = true
ark-ff.workspace = true

[dev-dependencies]
tempfile = "3"
